âœ¨ RotatingText Effekt hinzugefÃ¼gt - Demo-Zugang entfernt und professionelle Texte mit Animation

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "date-fns-tz": "^3.2.0",
     "gsap": "^3.13.0",
     "lucide-react": "^0.545.0",
+    "motion": "^12.23.24",
     "next": "15.5.4",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.1",
