--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@react-email/render": "^1.3.2",
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.4.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/nodemailer": "^7.0.2",
     "bcryptjs": "^3.0.2",
@@ -28,6 +30,7 @@
     "date-fns-tz": "^3.2.0",
     "gsap": "^3.13.0",
     "lucide-react": "^0.545.0",
+    "mathjs": "^15.0.0",
     "motion": "^12.23.24",
     "next": "15.5.4",
     "next-auth": "^4.24.11",
@@ -39,6 +42,7 @@
     "react-hook-form": "^7.64.0",
     "resend": "^6.1.2",
     "tailwind-merge": "^3.3.1",
+    "three": "^0.180.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
