--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-three/fiber": "^9.4.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/nodemailer": "^7.0.2",
+    "@types/qrcode": "^1.5.5",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -36,6 +37,7 @@
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.1",
     "prisma": "^6.17.1",
+    "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
